style(employees): fixed dialog layout gap

--- a/assets/scss/components/_dialog.scss
+++ b/assets/scss/components/_dialog.scss
@@ -4,6 +4,7 @@
   padding: 16px 32px 40px 32px;
   border-radius: 1.6rem;
   width: max-content;
+  gap: 24px;
 
   @include respond(phone) {
     width: 100%;
@@ -23,7 +24,6 @@
     flex-direction: column;
     justify-content: flex-end;
     gap: 8px;
-    padding-top: 2rem;
   }
 
   &__close-btn {
